ajuste auditorias con hallazgos

--- a/src/app/pages/plans-work/list/list.component.html
+++ b/src/app/pages/plans-work/list/list.component.html
@@ -84,7 +84,7 @@
                                                                     <div class="row text-muted text-left">
                                                                         <div class="col-12 border-end border-end-dashed">
                                                                             <h5 class="mb-1" style="color: #405189;"><b>{{data.installationId > 0 ? data.installation_work_plan.nombre
-                                                                                 : ''}}</b></h5>
+                                                                                 : (data.descripcion)}}</b></h5>
                                                                         </div>
                                                                     </div>
                                                                 </div>
