ajustes visuales en perfiles, quitar sub elementos

--- a/src/app/pages/projects/installations/installations.component.html
+++ b/src/app/pages/projects/installations/installations.component.html
@@ -146,7 +146,7 @@
 
                                                 <button type="button" class="btn btn-sm btn-primary edit-item-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)">Editar</button>
 
-                                                <button type="button" class="btn btn-sm btn-success edit-item-btn" style="width: 110px;" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id, data.nombre)">Sub Elemento</button>
+                                                <!--<button type="button" class="btn btn-sm btn-success edit-item-btn" style="width: 110px;" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id, data.nombre)">Sub Elemento</button>-->
 
                                                 <button type="button" class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
                                                 (click)="confirm(deleteModel,data.id)">Eliminar</button>
