--- a/src/app/pages/extrapages/profile/profile/profile.component.html
+++ b/src/app/pages/extrapages/profile/profile/profile.component.html
@@ -339,9 +339,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div> -->
+                                    </div>-->
 
-                                    <div class="row">
+                                    <!--<div class="row">
                                         <div class="col-lg-12">
                                             <div class="card">
                                                 <div class="card-header align-items-center d-flex">
@@ -358,7 +358,7 @@
                                                                 
                                                                 <ng-template ngbNavContent>
                                                                     <div>No existe historial de actividades</div>
-                                                                </ng-template>
+                                                                </ng-template>-->
                                                                 <!--<ng-template ngbNavContent>
                                                                     <div class="profile-timeline order-status">
                                                                         <ngb-accordion #acc="ngbAccordion"
@@ -663,7 +663,7 @@
                                                                         </ngb-accordion>
                                                                     </div>
                                                                 </ng-template>-->
-                                                            </li>
+                                                            <!--</li>
                                                             <li [ngbNavItem]="2" class="nav-item" [disabled]="true">
                                                                 <a ngbNavLink class="nav-link" data-bs-toggle="tab"
                                                                     role="tab">
@@ -796,23 +796,23 @@
                                                                                                         <img src="assets/images/small/img-3.jpg"
                                                                                                             alt=""
                                                                                                             class="img-fluid rounded" />
-                                                                                                    </div><!--end col-->
+                                                                                                    </div>
                                                                                                     <div class="col-3">
                                                                                                         <img src="assets/images/small/img-5.jpg"
                                                                                                             alt=""
                                                                                                             class="img-fluid rounded" />
-                                                                                                    </div><!--end col-->
+                                                                                                    </div>
                                                                                                     <div class="col-3">
                                                                                                         <img src="assets/images/small/img-7.jpg"
                                                                                                             alt=""
                                                                                                             class="img-fluid rounded" />
-                                                                                                    </div><!--end col-->
+                                                                                                    </div>
                                                                                                     <div class="col-3">
                                                                                                         <img src="assets/images/small/img-9.jpg"
                                                                                                             alt=""
                                                                                                             class="img-fluid rounded" />
-                                                                                                    </div><!--end col-->
-                                                                                                </div><!--end row-->
+                                                                                                    </div>
+                                                                                                </div>
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>
@@ -1105,23 +1105,23 @@
                                                                                                         <img src="assets/images/small/img-3.jpg"
                                                                                                             alt=""
                                                                                                             class="img-fluid rounded" />
-                                                                                                    </div><!--end col-->
+                                                                                                    </div>
                                                                                                     <div class="col-3">
                                                                                                         <img src="assets/images/small/img-5.jpg"
                                                                                                             alt=""
                                                                                                             class="img-fluid rounded" />
-                                                                                                    </div><!--end col-->
+                                                                                                    </div>
                                                                                                     <div class="col-3">
                                                                                                         <img src="assets/images/small/img-7.jpg"
                                                                                                             alt=""
                                                                                                             class="img-fluid rounded" />
-                                                                                                    </div><!--end col-->
+                                                                                                    </div>
                                                                                                     <div class="col-3">
                                                                                                         <img src="assets/images/small/img-9.jpg"
                                                                                                             alt=""
                                                                                                             class="img-fluid rounded" />
-                                                                                                    </div><!--end col-->
-                                                                                                </div><!--end row-->
+                                                                                                    </div>
+                                                                                                </div>
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>
@@ -1278,10 +1278,10 @@
                                                     <div class="tab-content text-muted">
                                                         <div [ngbNavOutlet]="customNav"></div>
                                                     </div>
-                                                </div><!-- end card body -->
-                                            </div><!-- end card -->
-                                        </div><!-- end col -->
-                                    </div><!-- end row -->
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>-->
 
                                     <!--<div class="card">
                                         <div class="card-body">
@@ -1584,7 +1584,7 @@
                             </div><!--end row-->
                         </ng-template>
                     </li>
-                    <li [ngbNavItem]="2" class="nav-item" [disabled]="true">
+                    <!--<li [ngbNavItem]="2" class="nav-item" [disabled]="true">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="ri-list-unordered d-inline-block d-md-none"></i> <span
                                 class="d-none d-md-inline-block">Actividades</span>
@@ -1766,13 +1766,13 @@
                                 </div>
                             </div>
                         </ng-template>
-                    </li>
+                    </li>--><!--
                     <li [ngbNavItem]="3" class="nav-item" [disabled]="true">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="ri-price-tag-line d-inline-block d-md-none"></i> <span
                                 class="d-none d-md-inline-block">Proyectos</span>
                         </a>
-                        <ng-template ngbNavContent>
+                        <ng-template ngbNavContent>-->
                             <!--<div class="card">
                                 <div class="card-body">
                                     <div class="row">
@@ -1840,8 +1840,8 @@
                                     </div>
                                 </div>
                             </div>-->
-                        </ng-template>
-                    </li>
+                        <!--</ng-template>
+                    </li>--><!--
                     <li [ngbNavItem]="4" class="nav-item" [disabled]="true">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="ri-folder-4-line d-inline-block d-md-none"></i> <span
@@ -1934,7 +1934,7 @@
                                 </div>
                             </div>
                         </ng-template>
-                    </li>
+                    </li>-->
                 </ul>
                 <div class="flex-shrink-0">
                     <a (click)="editarPerfil()" class="btn btn-success"><i
