--- a/src/app/pages/projects/team/team.component.html
+++ b/src/app/pages/projects/team/team.component.html
@@ -52,7 +52,7 @@
                                                                 <ul class="dropdown-menu dropdown-menu-end"
                                                                     aria-labelledby="dropdownMenuLink2" ngbDropdownMenu>
                                                                     <li><a class="dropdown-item"
-                                                                            href="javascript:void(0);"><i
+                                                                        (click)="irPerfil(data)"><i
                                                                                 class="ri-eye-line me-2 align-middle"></i>Ver</a>
                                                                     </li>
                                                                     <!--<li><a class="dropdown-item"
@@ -161,7 +161,7 @@
                                                                 <ul class="dropdown-menu dropdown-menu-end"
                                                                     aria-labelledby="dropdownMenuLink2" ngbDropdownMenu>
                                                                     <li><a class="dropdown-item"
-                                                                            href="javascript:void(0);"><i
+                                                                        (click)="irPerfil(data)"><i
                                                                                 class="ri-eye-line me-2 align-middle"></i>Ver</a>
                                                                     </li>
                                                                     <!--<li><a class="dropdown-item"
@@ -485,11 +485,11 @@
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink14"
                                         ngbDropdownMenu>
-                                        <li><a class="dropdown-item" href="javascript:void(0);"><i
+                                        <li><a class="dropdown-item" (click)="irPerfil(perfil)"><i
                                                     class="ri-eye-line me-2 align-middle"></i>Ver</a></li>
                                         <!--<li><a class="dropdown-item" href="javascript:void(0);"><i
                                                     class="ri-star-line me-2 align-middle"></i>Favorites</a></li>-->
-                                        <li><a class="dropdown-item" href="javascript:void(0);"><i
+                                        <li><a class="dropdown-item" (click)="confirm(deleteModel,perfil.id)"><i
                                                     class="ri-delete-bin-5-line me-2 align-middle"></i>Borrar</a></li>
                                     </ul>
                                 </div>
@@ -504,7 +504,7 @@
                                     class="link-primary arrow-none team_name">Nancy Martino</a></h5>
                             <p class="text-muted">Team Leader & HR</p>
                         </div>
-                        <div class="hstack gap-2 justify-content-center mt-4">
+                        <!--<div class="hstack gap-2 justify-content-center mt-4">
                             <div class="avatar-xs">
                                 <a href="javascript:void(0);"
                                     class="avatar-title arrow-none bg-soft-secondary text-secondary rounded fs-16">
@@ -529,7 +529,7 @@
                                     <i class="ri-dribbble-fill"></i>
                                 </a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="row g-0 text-center">
                         <div class="col-6">
@@ -551,19 +551,23 @@
                     <div class="p-3">
                         <h5 class="fs-15 mb-3">Detalles Personales</h5>
                         <div class="mb-3">
-                            <p class="text-muted text-uppercase fw-semibold fs-12 mb-2">Number</p>
-                            <h6>+(256) 2451 8974</h6>
+                            <p class="text-muted text-uppercase fw-semibold fs-12 mb-2">Teléfono</p>
+                            <h6 class="telefono">+(256) 2451 8974</h6>
                         </div>
                         <div class="mb-3">
-                            <p class="text-muted text-uppercase fw-semibold fs-12 mb-2">Email</p>
-                            <h6>nancymartino@email.com</h6>
+                            <p class="text-muted text-uppercase fw-semibold fs-12 mb-2">Rut</p>
+                            <h6 class="rut">12345678-9</h6>
                         </div>
-                        <div>
+                        <div class="mb-3">
+                            <p class="text-muted text-uppercase fw-semibold fs-12 mb-2">Cargo</p>
+                            <h6 class="cargo">Administrador</h6>
+                        </div>
+                        <!--<div>
                             <p class="text-muted text-uppercase fw-semibold fs-12 mb-2">Location</p>
                             <h6 class="mb-0">Carson City - USA</h6>
-                        </div>
+                        </div>-->
                     </div>
-                    <div class="p-3 border-top">
+                    <!--<div class="p-3 border-top">
                         <h5 class="fs-15 mb-4">File Manager</h5>
                         <div class="d-flex mb-3">
                             <div class="flex-shrink-0 avatar-xs">
@@ -621,12 +625,12 @@
                                 846 MB
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <!--end offcanvas-body-->
                 <div class="offcanvas-foorter border p-3 hstack gap-3 text-center position-relative">
-                    <button class="btn btn-light w-100"><i class="ri-question-answer-fill align-bottom ms-1"></i> Enviar Mensaje</button>
-                    <button routerLink="/pages/profile" class="btn btn-primary w-100"><i
+                    <!--<button class="btn btn-light w-100"><i class="ri-question-answer-fill align-bottom ms-1"></i> Enviar Mensaje</button>-->
+                    <button (click)="irPerfil(perfil)" class="btn btn-primary w-100"><i
                             class="ri-user-3-fill align-bottom ms-1"></i> Ver Perfil</button>
                 </div>
             </ng-template>
