ajuste toast de error y quitar inicio sesion por redes

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -87,7 +87,7 @@
                                       <button class="btn btn-success w-100" type="submit">Registrar</button>
                                   </div>
 
-                                  <div class="mt-4 text-center">
+                                  <!--<div class="mt-4 text-center">
                                       <div class="signin-other-title">
                                           <h5 class="fs-13 mb-4 title text-muted">Crear usuario con</h5>
                                       </div>
@@ -98,7 +98,7 @@
                                           <button type="button" class="btn btn-dark btn-icon waves-effect waves-light"><i class="ri-github-fill fs-16"></i></button>
                                           <button type="button" class="btn btn-info btn-icon waves-effect waves-light"><i class="ri-twitter-fill fs-16"></i></button>
                                       </div>
-                                  </div>
+                                  </div>-->
                               </form>
 
                           </div>
