replicar ventana usuarios globales

--- a/src/app/pages/extrapages/team/team.component.html
+++ b/src/app/pages/extrapages/team/team.component.html
@@ -87,7 +87,7 @@
                                                                     (click)="viewDataGet(data.id)">
                                                                     <h5 class="fs-16 mb-1">{{data.nombre}}</h5>
                                                                 </a>
-                                                                <p class="text-muted mb-0">{{data.jobPosition}}</p>
+                                                                <p class="text-muted mb-0">{{getRol(data.rol)}}</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -196,6 +196,7 @@
                                                                     <h5 class="fs-16 mb-1">{{data.nombre}}</h5>
                                                                 </a>
                                                                 <p class="text-muted mb-0">{{data.email}}</p>
+                                                                <p class="text-muted mb-0">{{getRol(data.rol)}}</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -274,7 +275,7 @@
                                             <div class="flex-grow-1">
                                                 <h5 class="modal-title text-white" id="createMemberLabel">Agregar Nuevo Usuario</h5>
                                             </div>
-                                            <div class="flex-shrink-0">
+                                            <!--<div class="flex-shrink-0">
                                                 <div class="d-flex gap-3 align-items-center">
                                                     <div>
                                                         <label for="cover-image-input" class="mb-0"
@@ -297,11 +298,11 @@
                                                         aria-label="Close"
                                                         (click)="modal.dismiss('Cross click')"></button>
                                                 </div>
-                                            </div>
+                                            </div>-->
                                         </div>
                                     </div>
                                 </div>
-                                <div class="text-center mb-4 mt-n5 pt-2">
+                                <!--<div class="text-center mb-4 mt-n5 pt-2">
                                     <div class="position-relative d-inline-block">
                                         <div class="position-absolute bottom-0 end-0">
                                             <label for="member-image-input" class="mb-0" data-bs-toggle="tooltip"
@@ -324,8 +325,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="mb-3">
+                                </div>-->
+                                <div class="row">
+                                    <div class="col-sm-6 mb-3">
                                     <label for="teammembersName" class="form-label">Nombre</label>
                                     <input type="text" class="form-control" id="teammembersName"
                                         placeholder="Ingresar Nombre" formControlName="nombre"
@@ -333,15 +335,17 @@
                                     <div class="invalid-feedback">Ingrese Nombre.</div>
                                 </div>
                                 
-                                <div class="mb-3">
+                                <div class="col-sm-6 mb-3">
                                     <label for="teammembersLastName" class="form-label">Apellido</label>
                                     <input type="text" class="form-control" id="teammembersLastName"
                                         placeholder="Ingresar Apellido" formControlName="apellido"
                                         [ngClass]="{ 'is-invalid': submitted && form['apellido'].errors }">
                                     <div class="invalid-feedback">Ingrese Apellido.</div>
                                 </div>
+                                </div>
 
-                                <div class="mb-3">
+                                <div class="row">
+                                    <div class="col-sm-6 mb-3">
                                     <label for="teammembersRut" class="form-label">RUT</label>
                                     <input type="text" class="form-control" id="teammembersRUT"
                                         placeholder="Ingresar RUT" formControlName="rut"
@@ -349,29 +353,72 @@
                                     <div class="invalid-feedback">Ingrese RUT.</div>
                                 </div>
                                 
-                                <div class="mb-3">
-                                    <label for="teammembersEmail" class="form-label">Correo Electrónico</label>
-                                    <input type="text" class="form-control" id="teammembersEmail"
-                                        placeholder="Ingresar Correo Electrónico" formControlName="email"
-                                        [ngClass]="{ 'is-invalid': submitted && form['email'].errors }">
-                                    <div class="invalid-feedback">Ingrese Correo Electrónico.</div>
-                                </div>
-                                
-                                <div class="mb-3">
+                                <div class="col-sm-6 mb-3">
                                     <label for="teammembersPhone" class="form-label">Teléfono</label>
                                     <input type="text" class="form-control" id="teammembersPhone"
                                         placeholder="Ingresar Teléfono" formControlName="telefono"
                                         [ngClass]="{ 'is-invalid': submitted && form['telefono'].errors }">
                                     <div class="invalid-feedback">Ingrese Teléfono.</div>
                                 </div>
+                                </div>
                                 
-                                <div class="mb-3">
+                                <div class="row">
+                                    <div class="col-sm-6 mb-3">
+                                    <label for="teammembersEmail" class="form-label">Correo Electrónico</label>
+                                    <input type="text" class="form-control" id="teammembersEmail"
+                                        placeholder="Ingresar Correo Electrónico" formControlName="email"
+                                        [ngClass]="{ 'is-invalid': submitted && form['email'].errors }">
+                                    <div class="invalid-feedback">Ingrese Correo Electrónico.</div>
+                                </div>
+
+                                <div class="col-sm-6 mb-3">
                                     <label for="teammembersCargo" class="form-label">Cargo</label>
                                     <input type="text" class="form-control" id="teammembersCargo"
                                         placeholder="Ingresar Cargo" formControlName="cargo"
                                         [ngClass]="{ 'is-invalid': submitted && form['cargo'].errors }">
                                     <div class="invalid-feedback">Ingrese Cargo.</div>
                                 </div>
+                                </div>
+                                
+
+                                <div class="mb-3">
+                                    <label for="teammembersRol" class="form-label">Rol</label>
+                                    <select class="form-control form-select" aria-label="Rol" formControlName="rol" placeholder="Seleccione Rol" [ngClass]="{ 'is-invalid': submitted && form['rol'].errors }" (change)="selectRol($event)">
+                                        <option value="" selected>Seleccione Rol </option>
+                                        <option *ngFor="let rl of roles;" value="{{rl.id}}">{{rl.nombre}}</option>
+                                    </select>
+                                    <div class="invalid-feedback">Por favor ingresar proyectos.</div>
+                                </div>
+                                
+                                <div class="mb-3" *ngIf="rol == 3">
+                                    <label for="teammembersProjects" class="form-label">Proyectos</label>
+                                    <select class="form-control form-select" aria-label="Proyectos" formControlName="projects" placeholder="Seleccione Proyectos" [ngClass]="{ 'is-invalid': submitted && form['projects'].errors }" multiple>
+                                        <option value="" selected>Todos </option>
+                                        <option *ngFor="let p of projects;" value="{{p.id}}">{{p.nombre}}</option>
+                                    </select>
+                                    <div class="invalid-feedback">Por favor ingresar proyectos.</div>
+                                </div>
+                                
+                                <div class="mb-3" *ngIf="rol != 2">
+                                    <label for="teammembersAreas" class="form-label">Areas Administrativas</label>
+                                    <select class="form-control form-select" aria-label="Area Administrativa" placeholder="Seleccione Area Administrativa"
+                                    (change)="selectArea($event)" multiple>
+                                        <option value="" selected>Todas</option>
+                                        <option *ngFor="let r of areas;" value="{{r.id}}">{{r.nombre}}</option>
+                                    </select>
+                                    <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
+                                </div>
+
+                                <ng-container *ngFor="let item of items;let i = index;">
+                                    <div class="mb-3">
+                                        <label for="area-field" class="form-label">Sub Area Administrativa</label>
+                                        <select class="form-control form-select mb-3" placeholder="Seleccione Sub Area Administrativa" (change)="selectAreaChildren($event, i)">
+                                                            <option value="" selected>Seleccione Sub Area Administrativa</option>
+                                                            <option *ngFor="let o of item.options;" value="{{o.id}}">{{o.nombre}}</option>
+                                        </select>
+                                        <div class="invalid-feedback">Por favor ingresar sub-area administrativa.</div>
+                                    </div>
+                                </ng-container>
 
                                 <!--<div class="mb-4">
                                     <label for="designation" class="form-label">Descripción</label>
